tests/fails/f44.t
require("fail")

terra foo()
  ::a::
  ::a::
end
foo()
